# code

./: README.md  check.sh  exp.sh  install_third_party.sh  kill_proxy_datanode.sh  run_client.sh  run_proxy_datanode.sh  run_server.sh
data/: trace.txt
project/: CMakeLists.txt  clusterinfo.xml  config.ini
project/include/: client.h  coordinator.h  datanode.h  logger.h  metadata.h  proxy.h
project/include/ec/: erasure_code.h  lrc.h  pc.h  rs.h  utils.h
project/src/: metadata.cpp  tinyxml2.cpp
project/src/client/: client.cpp  run_client.cpp
project/src/coordinator/: auxs.cpp  coordinator.cpp  merge.cpp  placement.cpp  repair.cpp  run_coordinator.cpp  transition.cpp
project/src/datanode/: datanode.cpp  run_datanode.cpp
project/src/ec/: erasure_code.cpp  lrc.cpp  pc.cpp  rs.cpp  utils.cpp
project/src/proxy/: handle_recalculate.cpp  handle_repair.cpp  proxy.cpp  run_proxy.cpp
project/src/tests/: test_lrc.cpp  test_pc.cpp  test_rs.cpp
res/: saturation_sweep.csv
run_cluster_sh/0/: cluster_run_datanode.sh  cluster_run_proxy.sh
run_cluster_sh/1/: cluster_run_datanode.sh  cluster_run_proxy.sh
run_cluster_sh/2/: cluster_run_datanode.sh  cluster_run_proxy.sh
run_cluster_sh/3/: cluster_run_datanode.sh  cluster_run_proxy.sh
run_cluster_sh/4/: cluster_run_datanode.sh  cluster_run_proxy.sh
run_cluster_sh/5/: cluster_run_datanode.sh  cluster_run_proxy.sh
run_cluster_sh/6/: cluster_run_datanode.sh  cluster_run_proxy.sh
run_cluster_sh/7/: cluster_run_datanode.sh  cluster_run_proxy.sh
run_cluster_sh/8/: cluster_run_datanode.sh
simulation/: config.txt  simulation.cpp
simulation/result/: results_exp.csv
tools/: generate_trace.py  generator_file.py  generator_sh.py
